--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start": "node ./dist/index.js",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon"
   },
-  "author": "",
+  "author": "Dhruv Dhari",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
